--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2"
+  },
+  "scripts": {
+    "start": "node backend/server.js"
   }
 }
